--- a/fml/Cargo.toml
+++ b/fml/Cargo.toml
@@ -9,8 +9,8 @@ crossbeam = "0.7.3"
 codechain-basesandbox = { path = "../basesandbox" }
 fml-macro = { path = "./macro" }
 rand = "0.6.1"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_cbor = "0.11.1"
 serde_derive = "1.0"
-lazy_static = "1.4.0"
+
