--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,6 @@ ctimer = { package = "codechain-timer", path = "util/timer" }
 cmodule = { package = "codechain-module", path = "module" }
 ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
 crossbeam-channel = "0.3"
-cbasesandbox = {package = "codechain-basesandbox", path = "basesandbox"}
 fdlimit = "0.1"
 finally-block = "0.1"
 futures = "0.1"
@@ -52,6 +51,9 @@ serde_json = "1.0"
 tokio-core = "0.1.17"
 toml = "0.4"
 cidr = "0.0.4"
+cbasesandbox = {package = "codechain-basesandbox", path = "basesandbox"}
+fml = {package = "codechain-fml", path = "fml"}
+ctestmodule = {package = "codechain-testmodule", path = "testmodule"}
 
 [build-dependencies]
 vergen = "2"
