--- a/basesandbox/Cargo.toml
+++ b/basesandbox/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
 ccrypto = { package = "codechain-crypto", git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
-crossbeam-channel = "0.4.0"
+crossbeam = "0.7.3"
 codechain-module = { path = "../module" }
 nix = "0.17.0"
 hex = "0.4.2"
@@ -15,3 +15,4 @@ serde = "1.0"
 serde_json = "1.0"
 serde_cbor = "0.11.1"
 serde_derive = "1.0"
+lazy_static = "1.4.0"
